post-event update

--- a/content/index.html
+++ b/content/index.html
@@ -19,10 +19,34 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
 
     <div class="text-block">
-      <h2>Welcome to FOSDEM 2019!</h2>
-      <p><a href="page:/schedule/streaming">live feeds</a> from all the rooms.</p>
-      <p><a href="page:/schedule/amendments">Schedule Amendments</a> since the booklets went to press.</p>
-      <p><a href="https://sojourner.loomchild.net/#/tracks">Full rooms</a> show in red on the right hand side.</p>
+
+
+	<h2>Thank you all for another great FOSDEM!</h2>
+	<p>
+	Please tell us about your FOSDEM experience at 
+	<a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+	All your feedback, good or bad, and suggestions for next year will be greatly appreciated.
+	You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
+	</p><p>
+	As we prepare for our 20th edition next year, we would also like to receive any
+	interesting photos or stories you have of earlier years that you would be
+	willing to share at the event.  We'd also like to hear any interesting perspectives you can share about 
+        the impact of FOSDEM and changes within the domains of activity that were represented 
+	at the event during this period:
+	<a href="mailto:memories@fosdem.org">memories@fosdem.org</a>.
+	</p>
+
+	<h2>Videos</h2>
+	<p>We are adding videos of talks to the web pages for the individual talks 
+	when they are ready.  To see everything available so far, look in the
+	right-hand column of 
+	the <a href="https://fosdem.org/2019/schedule/events/">complete schedule</a>,
+	download from <a href="https://video.fosdem.org/2019/">video.fosdem.org/2019</a>
+	or view our 
+	<a href="https://www.youtube.com/user/fosdemtalks">YouTube channel</a>.
+	<a href="https://review.video.fosdem.org/overview">Processing status.</a>
+	</p>
+
     </div>
 
     <%
