Fix broken link to ULB website

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -198,7 +198,7 @@ If you need a taxi, we suggest calling Taxi Verts on
 <li><a target="_blank" href="http://en.wikivoyage.org/wiki/Brussels#Get_in"
        title="Wikivoyage: How to get to Brussels">
       Wikivoyage: How to get to Brussels</a></li>
-<li><a target="_blank" href="http://www.ulb.be/campus/solbosch/solbosch-public-transports.html"
+<li><a target="_blank" href="https://www.ulb.be/en/solbosch/directions"
        title="Instructions on ULB website on how to get to the Solbosch campus">
       ULB: Getting to the Solbosch</a></li>
 <li><a target="_blank" href="http://www.stib.be/guide_gids_new.html?l=en"
