Update security devroom do Fosdem 2020

--- a/content/schedule/devrooms/security.html
+++ b/content/schedule/devrooms/security.html
@@ -1,16 +1,17 @@
 <p>
-The security devroom topic this year is <q>Operating System Security<q>.
+  The security devroom topic this year is <q>Practial use of security technologies<q>.
 </p>
 
 <p>
-This year's topic is about the operating system components that make
-software secure and usable: security controls, security and usability,
-cryptography, secure communications etc. We welcome presentations which
-take into account these factors, and presentations that analyze other's
-solutions.
+  This covers security protocols and their usability, the usability of the open
+  source crypto libraries and applications from both developer and user side,
+  pitfails of using crypto, security threats, vulnerabilities and their mitigations
+  in real-world use cases.
+  We welcome presentations which elaborate on these topics, and presentations
+  that analyze other's solutions.
 </p>
 
 <p>
-See <a href="https://github.com/security-devroom/fosdem-2019">https://github.com/security-devroom/fosdem-2019</a>
-for more information.
+  See <a href="https://github.com/security-devroom/fosdem-2020">https://github.com/security-devroom/fosdem-2020</a>
+  for more information.
 </p>
