--- a/content/stands.html
+++ b/content/stands.html
@@ -5,78 +5,18 @@
 title: Stands
 stands:
 # All [alphabetically] (66):
-  AW (8):
-   - OpenEmbedded: http://www.openembedded.org/
-   - Project ACRN: https://projectacrn.org/
-   - coreboot, flashrom, LinuxBoot: https://coreboot.org/
-   - GRUB Project: http://www.gnu.org/software/grub/
-   - Ham Radio: https://www.uba.be/en/
-   - Espruino, MicroPython: https://espruino.com/
-   - Linaro: https://www.linaro.org/
-   - PINE64 Community: https://www.pine64.org
-  H (8):
-   - Grafana: https://www.grafana.com/
-   - OpenLDAP: https://www.openldap.org/
-   - Bareos: https://www.bareos.org/
-   - Mender.io: https://mender.io/
-   - openHAB: https://www.openhab.org/
-   - Turris: https://www.turris.cz/
-   - wolfSSL: https://www.wolfssl.com/
-   - O'Reilly Media: http://www.oreilly.com/
   K [level 1, group A] (11):
-   - KDE: https://www.kde.org/
-   - Nextcloud: https://nextcloud.com/
-   - GNOME: https://www.gnome.org/
-   - LibreOffice: https://www.libreoffice.org/
-   - LFS: http://linuxfromscratch.org/
-   - Gentoo: https://www.gentoo.org/
-   - FreeBSD Project: https://www.freebsd.org/
-   - illumos: https://illumos.org/
-   - openSUSE Project: https://www.opensuse.org/
-   - CentOS: https://www.centos.org/
-   - Fedora Project: https://getfedora.org/
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
   K [level 1, group B] (8):
-   - Mozilla: https://mozilla.org/
-   - Debian: https://www.debian.org/
-   - Haiku: https://www.haiku-os.org/
-   - Bazel: https://bazel.build/
-   - Kopano: https://kopano.io/
-   - ownCloud: https://owncloud.org/
-   - XWiki, Cryptpad: https://xwiki.org/
-   - The Apache Software Foundation: https://www.apache.org/
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
   K [level 1, group C] (10):
-   - Free Software Foundation, Free Software Foundation Europe: http://www.fsf.org/
-   - Software Freedom Conservancy: https://sfconservancy.org/
-   - Open Source Initiative: https://www.opensource.org/
-   - FOSSASIA: https://fossasia.org/
-   - Linux Professional Institute (LPI): https://www.lpi.org/
-   - IsardVDI: http://www.isardvdi.com/main/
-   - OpenStack, RDO Community: https://www.openstack.org/
-   - oVirt, Foreman: https://ovirt.org/
-   - Ceph, Gluster: https://ceph.com/
-   - Open Source Design: http://opensourcedesign.net/
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
   K [level 2] (21):
-   - Godot Engine: https://godotengine.org/
-   - 0 A.D.: https://play0ad.com/
-   - MySQL: http://dev.mysql.com/
-   - Percona: https://www.percona.com/
-   - PostGraphile: https://graphile.org/postgraphile/
-   - PostgreSQL: https://www.postgresql.org/
-   - Eclipse Foundation: https://eclipse.org/
-   - JavaScript
-   - DashboardHub: http://dashboardhub.io/
-   - Open Source Test Case Management
-   - GitLab: https://about.gitlab.com/
-   - App Inventor: http://appinventor.mit.edu/
-   - Schul-frei, Teckids e.V.
-   - Google Summer of Code: https://summerofcode.withgoogle.com/
-   - Python: https://www.python-fosdem.org/
-   - Perl Programming Languages: https://www.perl.org/
-   - SOFA Open Source Physics Engine: https://www.sofa-framework.org/
-   - VideoLAN: https://www.videolan.org/
-   - Emitter: https://emitter.io/
-   - Matrix.org: https://matrix.org/
-   - The Realtime Lounge: https://xmpp.org/
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
+  S [level 1] (16):
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
+  S [level 2] (16):
+    - Accepted stands have not been announced yet.: https://www.fosdem.org
 ---
 <%
   # parse stands meta
