about: update team members

--- a/content/about.html
+++ b/content/about.html
@@ -102,9 +102,10 @@ navtitle: About
     <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
-      <li>Niels Ballis</li>
       <li>Linda Calders</li>
+      <li>Quint Daenen</li>
       <li>Gerry Demaret</li>
+      <li>Julien Detroz</li>
       <li>Pieter De Praetere</li>
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
@@ -114,7 +115,6 @@ navtitle: About
       <li>Richard Hartmann</li>
       <li>Alasdair Kergon</li>
       <li>Vasil Kolev</li>
-      <li>Daniele Lacamera</li>
       <li>Koert Loret</li>
       <li>Jan-Frederik Martens</li>
       <li>Marthe Parada Delgado</li>
@@ -122,13 +122,17 @@ navtitle: About
       <li>Stella Rouzi</li>
       <li>Sebastian Schauenburg</li>
       <li>Jonas Scheers</li>
+      <li>Kristian Schuhmacher</li>
       <li>Johan van Selst</li>
       <li>Wouter Simons</li>
       <li>Ieva Supjeva</li>
+      <li>Miguel Terol Espino</li>
       <li>Emanuil Tolev</li>
       <li>Johan Van de Wauw</li>
       <li>Mark Van den Borre</li>
+      <li>Peter Van Eynde</li>
       <li>Wouter Verhelst</li>
+      <li>Koen Vervloesem</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
     </ul>
