certification: update LPI session information

--- a/content/certification.html
+++ b/content/certification.html
@@ -64,7 +64,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
       <td><a href="https://www.lpi.org/our-certifications/lpic-1-overview">LPIC-1</a></td>
       <td>101, 102</td>
       <td>&euro; 90.00</td>
-      <td>English, French, German</td>
+      <td>English, German</td>
     </tr>
     <tr>
       <td><a href="https://www.lpi.org/our-certifications/lpic-2-overview">LPIC-2</a></td>
@@ -79,7 +79,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
       <td>English</td>
     </tr>
     <tr>
-      <td><a href="https://www.lpice.eu/en/our-certifications/devops-tools-engineer/">LPIC-OT DevOps Tools Engineer</a></td>
+      <td><a href="https://www.lpice.eu/en/our-certifications/devops-tools-engineer/">DevOps Tools Engineer</a></td>
       <td>701</td>
       <td>&euro; 90.00</td>
       <td>English</td>
