certification: fix BSD Specialist naming & link

--- a/content/certification.html
+++ b/content/certification.html
@@ -85,7 +85,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
       <td>English</td>
     </tr>
     <tr>
-      <td><a href="#">BSD Certification</a></td>
+      <td><a href="https://www.lpice.eu/en/our-certifications/bsd-specialist/">BSD Specialist</a></td>
       <td>702</td>
       <td>&euro; 90.00</td>
       <td>English</td>
