certification: add LibreOffice

--- a/content/certification.html
+++ b/content/certification.html
@@ -11,7 +11,8 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <p>
-  The <a href="https://lpi.org/">Linux Professional Institute</a> will
+  The <a href="https://lpi.org/">Linux Professional Institute</a> and
+  <a href="https://www.documentfoundation.org/">The Document Foundation</a> will
   again organise exam sessions during <%= conference()[:title] %>.
   Interested candidates will be able to register for exams with the respective
   certification groups.
@@ -118,3 +119,30 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
     Candidates should be present no later than 15 minutes before the exam.
   </li>
 </ul>
+
+<hr/>
+
+<a name="tdf"></a>
+<img src="asset:tdf-logo" alt=""
+  style="float:right; margin-left: 1em; margin-right: 1em;"/>
+<h2>LibreOffice Certification program</h2>
+<p>
+ The Document Foundation will offer the LibreOffice Certification at
+  <%= conference()[:title] %>.
+</p>
+
+<p>
+  Individuals willing to be certified must be already active in the field of
+  migrations from proprietary software and large deployments of LibreOffice,
+  and/or LibreOffice training programs of any kind (within a migration or a
+  large deployment, or a training school).  More information is available on the
+  <a href="https://www.documentfoundation.org/certification/program/">certification page
+    of The Document Foundation website</a>.
+</p>
+
+<h3>Registration procedure</h3>
+<p>
+  Candidates should complete the <a
+  href="https://www.documentfoundation.org/certification/application/">certification
+  application</a> on The Document Foundation website.
+</p>
