Add 2020 devroom allocation

--- a/content/manuals/program/devroom.html
+++ b/content/manuals/program/devroom.html
@@ -55,6 +55,279 @@ You also agree to find:
     <li>one (or more) volunteers to manage the microphone handover and camera through the day. Full instructions will be supplied. </li>
 </ul>
 </p>
+<h2>Devroom allocation (2020)</h2>
+<table>
+<thead><tr><th title="Field #1">Saturday</th>
+<th title="Field #2">Name</th>
+<th title="Field #3">Seats</th>
+</tr></thead>
+<tbody><tr>
+<td>Game Development </td>
+<td>K.3.201 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>RISC-V / Retrocomputing </td>
+<td>K.3.401 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>LLVM </td>
+<td>K.4.201 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Graphics </td>
+<td>K.4.401 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Hardware-aided Trusted Computing / Open Source Firmware, BMC and Bootloader </td>
+<td>K.4.601 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Quantum Computing </td>
+<td>H.1301 (Cornil) </td>
+<td align="right">189</td>
+</tr>
+<tr>
+<td>Free Java </td>
+<td>H.1302 (Depage) </td>
+<td align="right">206</td>
+</tr>
+<tr>
+<td>Software Defined Networking </td>
+<td>H.1308 (Rolin) </td>
+<td align="right">148</td>
+</tr>
+<tr>
+<td>DNS / Web Performance </td>
+<td>H.1309 (Van Rijn) </td>
+<td align="right">146</td>
+</tr>
+<tr>
+<td>Hacker room </td>
+<td>H.2111 </td>
+<td align="right">40</td>
+</tr>
+<tr>
+<td>Open Source Computer Aided Modeling and Design </td>
+<td>H.2213 </td>
+<td align="right">100</td>
+</tr>
+<tr>
+<td>MySQL, MariaDB and Friends </td>
+<td>H.2214 </td>
+<td align="right">100</td>
+</tr>
+<tr>
+<td>Security </td>
+<td>UA2.114 (Baudoux) </td>
+<td align="right">207</td>
+</tr>
+<tr>
+<td>Legal and Policy Issues </td>
+<td>UA2.220 (Guillissen) </td>
+<td align="right">292</td>
+</tr>
+<tr>
+<td>Testing and Automation </td>
+<td>UB2.147 </td>
+<td align="right">91</td>
+</tr>
+<tr>
+<td>Python </td>
+<td>UB2.252A (Lameere) </td>
+<td align="right">532</td>
+</tr>
+<tr>
+<td>Backup and Recovery / Dependency Management </td>
+<td>UD2.119 </td>
+<td align="right">50</td>
+</tr>
+<tr>
+<td>Infra Management </td>
+<td>UD2.120 (Chavanne) </td>
+<td align="right">446</td>
+</tr>
+<tr>
+<td>Containers </td>
+<td>UD2.208 (Decroly) </td>
+<td align="right">174</td>
+</tr>
+<tr>
+<td>Embedded, Mobile and Automotive </td>
+<td>UD2.218A </td>
+<td align="right">363</td>
+</tr>
+<tr>
+<td>Collaborative Information and Content Management Applications / Coding for Language Communities </td>
+<td>AW1.120 </td>
+<td align="right">74</td>
+</tr>
+<tr>
+<td>Erlang, Elixir and Friends / Graph Systems and Algorithms </td>
+<td>AW1.121 (not wheelchair accessible) </td>
+<td align="right">82</td>
+</tr>
+<tr>
+<td>Ada </td>
+<td>AW1.125 (not wheelchair accessible) </td>
+<td align="right">76</td>
+</tr>
+<tr>
+<td>Open Source Science and Research Tools </td>
+<td>AW1.126 </td>
+<td align="right">82</td>
+</tr>
+<tr>
+<td>Open Document Editors </td>
+<td>UB4.136 </td>
+<td align="right">96</td>
+</tr>
+<tr>
+<td>Sunday</td>
+<td> </td>
+<td align="right"></td>
+</tr>
+<tr>
+<td>Distributions </td>
+<td>K.3.201 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Rust </td>
+<td>K.3.401 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Debugging Tools </td>
+<td>K.4.201 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Hardware Enablement </td>
+<td>K.4.401 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Microkernels and Component-based OS </td>
+<td>K.4.601 </td>
+<td align="right">80</td>
+</tr>
+<tr>
+<td>Kotlin </td>
+<td>H.1301 (Cornil) </td>
+<td align="right">189</td>
+</tr>
+<tr>
+<td>JavaScript</td>
+<td>H.1302 (Depage) </td>
+<td align="right">206</td>
+</tr>
+<tr>
+<td>Software Defined Storage </td>
+<td>H.1308 (Rolin) </td>
+<td align="right">148</td>
+</tr>
+<tr>
+<td>Virtualization and IaaS </td>
+<td>H.1309 (Van Rijn) </td>
+<td align="right">146</td>
+</tr>
+<tr>
+<td>Hacker room </td>
+<td>H.2111 </td>
+<td align="right">40</td>
+</tr>
+<tr>
+<td>Open Source Design </td>
+<td>H.2213 </td>
+<td align="right">100</td>
+</tr>
+<tr>
+<td>PostgreSQL </td>
+<td>H.2214 </td>
+<td align="right">100</td>
+</tr>
+<tr>
+<td>Mozilla </td>
+<td>UA2.114 (Baudoux) </td>
+<td align="right">207</td>
+</tr>
+<tr>
+<td>Decentralized Internet and Privacy </td>
+<td>UA2.220 (Guillissen) </td>
+<td align="right">292</td>
+</tr>
+<tr>
+<td>Open Media </td>
+<td>UB2.147 </td>
+<td align="right">91</td>
+</tr>
+<tr>
+<td>Go </td>
+<td>UB2.252A (Lameere) </td>
+<td align="right">532</td>
+</tr>
+<tr>
+<td>Free Tools and Editors </td>
+<td>UD2.119 </td>
+<td align="right">50</td>
+</tr>
+<tr>
+<td>Monitoring and Observability </td>
+<td>UD2.120 (Chavanne) </td>
+<td align="right">446</td>
+</tr>
+<tr>
+<td>Real Time Communications </td>
+<td>UD2.208 (Decroly) </td>
+<td align="right">174</td>
+</tr>
+<tr>
+<td>Internet of Things </td>
+<td>UD2.218A </td>
+<td align="right">363</td>
+</tr>
+<tr>
+<td>Free Software Radio </td>
+<td>AW1.120 </td>
+<td align="right">74</td>
+</tr>
+<tr>
+<td>BSD </td>
+<td>AW1.121 (not wheelchair accessible) </td>
+<td align="right">82</td>
+</tr>
+<tr>
+<td>Minimalistic Languages </td>
+<td>AW1.125 (not wheelchair accessible) </td>
+<td align="right">76</td>
+</tr>
+<tr>
+<td>Geospatial </td>
+<td>AW1.126 </td>
+<td align="right">82</td>
+</tr>
+<tr>
+<td>Continuous Integration and Continuous Deployment </td>
+<td>UB4.136 </td>
+<td align="right">96</td>
+</tr>
+<tr>
+<td>HPC, Big Data, and Data Science </td>
+<td>UB5.132 </td>
+<td align="right">306</td>
+</tr>
+<tr>
+<td>Community </td>
+<td>UB5.230 </td>
+<td align="right">192</td>
+</tr>
+</tbody></table>
+
 <h2>Before the event</h2>
 <h3>Call for Papers</h3>
 <p>
