Style devroom table

--- a/content/manuals/program/devroom.html
+++ b/content/manuals/program/devroom.html
@@ -56,7 +56,7 @@ You also agree to find:
 </ul>
 </p>
 <h2>Devroom allocation (2020)</h2>
-<table>
+<table class="table table-striped table-condensed table-bordered">
 <thead><tr><th title="Field #1">Saturday</th>
 <th title="Field #2">Name</th>
 <th title="Field #3">Seats</th>
