Improve style devroom allocation table

--- a/content/manuals/program/devroom.html
+++ b/content/manuals/program/devroom.html
@@ -186,11 +186,13 @@ You also agree to find:
 <td>UB4.136 </td>
 <td align="right">96</td>
 </tr>
+<thead>
 <tr>
-<td>Sunday</td>
-<td> </td>
-<td align="right"></td>
+<th>Sunday</th>
+<th>Name</th>
+<th>Seats</th>
 </tr>
+</thead>
 <tr>
 <td>Distributions </td>
 <td>K.3.201 </td>
