Stand list, to be updated

--- a/content/stands.html
+++ b/content/stands.html
@@ -4,19 +4,93 @@
 # Use the format:   - Stand name (#tables): URL
 title: Stands
 stands:
-# All [alphabetically] (66):
-  K [level 1, group A] (11):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
+# All [thematically] ():
+  K [level 1, group A] (12):
+    - Operating Systems:
+      - CentOS
+      - Debian
+      - Gentoo Linux
+      - FreeBSD
+      - openSUSE
+      - openMandriva
+      - illumos
+      - Automotive Grade Linux
+      - Fedora Project
+      - Haiku (Saturday) - ReactOS (Sunday)
+    - Desktop Environments:
+      - KDE
+      - GNOME
   K [level 1, group B] (8):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
+    - Education:
+      - Coderdojo
+      - Skolelinux / BiscuIT / Teckids
+      - Linux Professional Institution (Saturday) - Open Source Design (Sunday)
+      - Sugar Labs (Saturday) - MIT App Inventor (Sunday)
+    - Databases:
+      - PostgreSQL
+      - Percona
+      - YottaDB
+      - PostGraphile
   K [level 1, group C] (10):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
-  K [level 2] (21):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
-  S [level 1] (16):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
-  S [level 2] (16):
-    - Accepted stands have not been announced yet.: https://www.fosdem.org
+    - Programming Environment:
+      - Raku
+      - Javascript
+      - Eclipse Foundation
+      - Nuspell
+      - Integration Process Community
+      - AdoptOpenJDK (Saturday) - Pharo (Sunday)
+    - Gaming:
+      - 0 A.D.
+      - Godot Engine
+    - System Administration:
+      - GitLab
+  K [level 2, group D] (5):
+    - Community Advocacy:
+      - Apache Software Foundation
+      - Free Software Foundation Europe
+      - OW2 Open Source Community
+      - OpenUK (Saturday) - FOSSASIA (Sunday)
+      - Google Summer of Code (Saturday) - Software Freedom Conservancy (Sunday)
+  K [level 2, group E] (16):
+    - World Wide Web
+      - Mozilla
+      - OWASP
+      - Realtime Lounge
+      - Matrix
+      - Mattermost
+      - wolfSSL
+      - Linphone
+      - Mautic (Saturday) - 3Box (Sunday)
+    - System Administration:
+      - OpenStack
+      - Jenkins
+      - oVirt & Foreman
+      - Grafana
+      - XCP-ng
+      - Kubevirt & Metal3
+      - Checkmk (Saturday) - Ntopng (Sunday)
+      - OpenTAP (Saturday) - Open Source Test Management (Sunday)
+  AW [group A] (4):
+    - Hardware:
+      - Coreboot + Flashrom + LinuxBoot
+      - Micropython & Espruino
+      - openWifi
+      - openHAB
+  AW [group B] (4):
+    - Hardware:
+      - OpenEmbedded
+      - Infobooth on amateur radio (HAM Radio)
+      - Technoethical (Saturday) - PINE64 (Sunday)
+  H [group A] (4):
+    - Office Software:
+      - LibreOffice
+      - Nextcloud
+      - Tine 2.0 (Saturday) - Tracim (Sunday)
+  H [group B] (4):
+    - Office Software:
+      - CiviCRM
+      - Kopano
+      - Musescore (Saturday) - Free Culture Podcasts (Sunday)
 ---
 <%
   # parse stands meta
