--- a/content/faq.html
+++ b/content/faq.html
@@ -23,5 +23,8 @@ navtitle: FAQ
 
         <p>For information regarding Belgian visa requirements, we refer you to <a href="https://diplomatie.belgium.be/en/services/travel_to_belgium/visa_for_belgium">Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation website</a></p>
 
+        <h5><span class="label label-info">Q:</span>I need proof I've been to FOSDEM for my studies, my job, travel reimbursement, ...</h5>
+        <p>Come to the infodesk and make a <a href="page:/support/donate/">donation</a>. You'll get a stamped receipt with your name on it. That is widely accepted for these purposes.</p>
+
     </div>
 </div>
