--- a/content/stands.html
+++ b/content/stands.html
@@ -3,56 +3,95 @@
 
 # Use the format:   - Stand name (#tables): URL
 title: Stands
-stands:
+stand_lists:
 # All [thematically] ():
   K [level 1, group A] (12):
-    - Operating Systems:
-      - CentOS
-      - Debian
-      - Gentoo Linux
-      - FreeBSD
-      - openSUSE
-      - openMandriva
-      - illumos
-      - Automotive Grade Linux
-      - Fedora Project
-      - Haiku (Saturday) - ReactOS (Sunday)
-    - Desktop Environments:
-      - KDE
-      - GNOME
+    info:
+      building: K
+      floor: 1
+      group: A
+      amount: 12
+    stands:
+      - theme: Operating Systems
+        stands:
+        - CentOS
+        - Debian
+        - Gentoo Linux
+        - FreeBSD
+        - openSUSE
+        - openMandriva
+        - illumos
+        - Automotive Grade Linux
+        - Fedora Project
+        - Haiku (Saturday) - ReactOS (Sunday)
+      - theme: Desktop Environments
+        stands:
+        - KDE
+        - GNOME
   K [level 1, group B] (8):
-    - Education:
+    info:
+      building: K
+      floor: 1
+      group: B
+      amount: 8
+    stands:
+    - theme: Education
+      stands:
       - Coderdojo
       - Skolelinux / BiscuIT / Teckids
       - Linux Professional Institution (Saturday) - Open Source Design (Sunday)
       - Sugar Labs (Saturday) - MIT App Inventor (Sunday)
-    - Databases:
+    - theme: Databases
+      stands:
       - PostgreSQL
       - Percona
       - YottaDB
       - PostGraphile
   K [level 1, group C] (10):
-    - Programming Environment:
+    info:
+      building: K
+      floor: 1
+      group: C
+      amount: 10
+    stands:
+    - theme: Programming Environment
+      stands:
       - Raku
       - Javascript
       - Eclipse Foundation
       - Nuspell
       - Integration Process Community
       - AdoptOpenJDK (Saturday) - Pharo (Sunday)
-    - Gaming:
+    - theme: Gaming
+      stands:
       - 0 A.D.
       - Godot Engine
-    - System Administration:
+    - theme: System Administration
+      stands:
       - GitLab
   K [level 2, group D] (5):
-    - Community Advocacy:
+    info:
+      building: K
+      floor: 2
+      group: D
+      amount: 5
+    stands:
+    - theme: Community Advocacy
+      stands:
       - Apache Software Foundation
       - Free Software Foundation Europe
       - OW2 Open Source Community
       - OpenUK (Saturday) - FOSSASIA (Sunday)
       - Google Summer of Code (Saturday) - Software Freedom Conservancy (Sunday)
   K [level 2, group E] (16):
-    - World Wide Web
+    info:
+      building: K
+      floor: 2
+      group: E
+      amount: 16
+    stands:
+    - theme: World Wide Web
+      stands:
       - Mozilla
       - OWASP
       - Realtime Lounge
@@ -61,7 +100,8 @@ stands:
       - wolfSSL
       - Linphone
       - Mautic (Saturday) - 3Box (Sunday)
-    - System Administration:
+    - theme: System Administration
+      stands:
       - OpenStack
       - Jenkins
       - oVirt & Foreman
@@ -71,75 +111,55 @@ stands:
       - Checkmk (Saturday) - Ntopng (Sunday)
       - OpenTAP (Saturday) - Open Source Test Management (Sunday)
   AW [group A] (4):
-    - Hardware:
+    info:
+      building: AW
+      floor: 1
+      group: A
+      amount: 4
+    stands:
+    - theme: Hardware
+      stands:
       - Coreboot + Flashrom + LinuxBoot
       - Micropython & Espruino
       - openWifi
       - openHAB
   AW [group B] (4):
-    - Hardware:
+    info:
+      building: AW
+      floor: 1
+      group: B
+      amount: 4
+    stands:
+    - theme: Hardware
+      stands:
       - OpenEmbedded
       - Infobooth on amateur radio (HAM Radio)
       - Technoethical (Saturday) - PINE64 (Sunday)
   H [group A] (4):
-    - Office Software:
+    info:
+      building: H
+      floor: 1
+      group: A
+      amount: 3
+    stands:
+    - theme: Office Software
+      stands:
       - LibreOffice
       - Nextcloud
       - Tine 2.0 (Saturday) - Tracim (Sunday)
   H [group B] (4):
-    - Office Software:
+    info:
+      building: H
+      floor: 1
+      group: B
+      amount: 3
+    stands:
+    - theme: Office Software
+      stands:
       - CiviCRM
       - Kopano
       - Musescore (Saturday) - Free Culture Podcasts (Sunday)
 ---
-<%
-  # parse stands meta
-  binfo, btables =
-    begin
-      binfo = {}
-      btables = {}
-      item[:stands].each do |b, list|
-        if b.to_sym =~ %r{^#}
-          next
-        end
-        if b.to_sym =~ %r{^(\S+)\s*(\[(.+?)\])?\s*(\((\d+)\))?\s*}
-          building = {
-            name: $1,
-            anchor: $1.downcase,
-          }
-          building[:subtitle] = $3 if $3
-          building[:tables] = $5.to_i if $5
-          binfo[b] = building
-          btables[b] = []
-        else
-          fail "building spec \"#{b}\" does not match expected pattern"
-        end
-        (list or []).each do |p|
-          project, tables, link =
-            begin
-              project, link = case p
-                              when Hash
-                                [ p.keys.first, p.values.first ]
-                              else
-                                [ p.to_s, nil ]
-                              end
-              project, tables = 
-                case project
-                when %r{^(.+?)\s+\((\d+)\)$}
-                  [ $1, $2.to_i ]
-                else
-                  [ project, 1 ]
-                end
-              [ project, tables, link ]
-            end
-          x = { project: project, tables: tables }
-          x[:link] = link if link
-          btables[b] << x
-        end
-      end
-      [ binfo, btables ]
-    end
-%>
 
 <p>
 Stands can be used to share information, demo software, sell merchandising,
@@ -148,71 +168,33 @@ in a more personal fashion.
 </p>
 <p>
 The following stands will be present at <%= conference()[:title] %>.
-<%
-=begin
-%>
-<span class="label label-info">
-The list of accepted stands for <%= conference()[:title] %> has not yet been published!
-</span>
-</p>
-<p>
-There are stands in the following <%= l('/schedule/buildings/', 'buildings') %>:
-<%= binfo.values.map{|x| x[:name]}.uniq.join(", ") %>
-<%
-=end
-%>
 </p>
 
-<% buildings_per_row = 2 %>
 <div class="container-fluid">
-<% binfo.keys.each_slice(buildings_per_row) do |buildings| %>
+  <% stand_list.each do | building, info | %>
   <div class="row-fluid">
-    <% buildings.each do |b| %>
-      <div class="span<%= 12 / buildings_per_row %>">
-        <table class="table table-condensed table-striped table-bordered">
-          <thead>
+    <table class="table table-condensed table-striped table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2"><h4><%= info['info']['building'] %> level <%= info['info']['floor'] %>(group <%= info['info']['group'] %>) </h4></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% info['stands'].each do | theme | %>
+        <% i = 0 %>
+          <tr>
+            <td colspan="2"><h5><%= theme['theme'] %></h5></td>
+          </tr>
+          <% theme['stands'].each do | stand | %>
+            <% i += 1 %>
             <tr>
-              <th colspan="3"><h4><a href="<%= pathof '/schedule/buildings/' %>#<%= binfo[b][:anchor] %>"><%= binfo[b].fetch(:name) %><% if binfo[b][:subtitle] %> (<%= binfo[b][:subtitle] %>)<% end %></h4></a></th>
+              <td><%= i %></td>
+              <td><%= stand %></td>
             </tr>
-          </thead>
-          <tbody>
-            <% i = 0 %>
-            <% btables[b].each do |p| %>
-              <% (1..p[:tables]).each do |r| %>
-                <% i += 1 %>
-                <tr>
-                  <td class="stands-table-index"><%= i %></td>
-                  <% if p[:project] %>
-                    <td class="stands-table-color-code <%= $colors[(i - 1) % $colors.size] %>"></td>
-                    <% if r == 1 %>
-                      <td class="stands-table-project" rowspan="<%= p[:tables] %>">
-                        <% if p[:link] %>
-                          <a href="<%= p[:link] %>"><%= p[:project] %></a>
-                        <% else %>
-                          <%= p[:project] %>
-                        <% end %>
-                      </td>
-                    <% end %>
-                  <% else %>
-                    <td class="stands-table-color-code"></td>
-                    <td class="stands-table-project"></td>
-                  <% end %>
-                </tr>
-              <% end %>
-            <% end %>
-            <%
-              occupied_tables = btables[b].map{|p| p[:tables]}.inject(0, :+)
-            %>
-            <% ((occupied_tables+1)..(binfo[b][:tables])).each do |i| %>
-              <tr>
-                <td class="stands-table-index"><%= i %></td>
-                <td class="stands-table-color-code"></td>
-                <td class="stands-table-project">-</td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    <% end %>
-  </div> <!-- .row -->
-<% end %>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <% end %>
+</div> <!-- .row -->
