--- a/content/stands.html
+++ b/content/stands.html
@@ -1,6 +1,10 @@
 ---
+title: Stands
+navtitle: Stands
+---
+<%
 # vim: set ts=2 sw=2 et ai ft=eruby:
-
+%>
 <p>
 Stands can be used to share information, demo software, sell merchandising,
 give away goodies and so forth, and to present themselves to the visitors
