--- a/content/stands.html
+++ b/content/stands.html
@@ -15,30 +15,30 @@ The following stands will be present at <%= conference()[:title] %>.
 </p>
 
 <div class="container-fluid">
-  <% $item_by_id.fetch('/stands-building/')[:stand_list].each do |building, data| %>
+  <% $item_by_id.fetch('/stands-building/')[:stand_list].each do |building| %>
   <div class="row-fluid">
-    <table class="table table-condensed table-striped table-bordered">
-      <thead>
-        <tr>
-          <th colspan="2"><h4><%= data['info']['building'].to_s %> level <%= data['info']['floor'].to_s %> (group <%= data['info']['group'].to_s %>) </h4></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% data['stands'].each do | theme | %>
-        <% i = 0 %>
-          <tr>
-            <td colspan="2"><h5><%= theme['theme'] %></h5></td>
-          </tr>
-          <% theme['stands'].each do | stand | %>
-            <% i += 1 %>
+      <table class="table table-condensed table-striped table-bordered">
+          <thead>
             <tr>
-              <td><%= i %></td>
-              <td><%= stand.to_s %></td>
+              <th colspan="2"><h4><%= building[:info][:building] %> level <%= building[:info][:floor] %> (group <%= building[:info][:group] %>) </h4></th>
             </tr>
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
+          </thead>
+          <tbody>
+            <% building[:stands].each do | theme | %>
+            <% i = 0 %>
+              <tr>
+                <td colspan="2"><h5><%= theme[:theme] %></h5></td>
+              </tr>
+              <% theme[:stands].each do | stand | %>
+                <% i += 1 %>
+                <tr>
+                  <td><%= i %></td>
+                  <td><%= stand.to_s %></td>
+                </tr>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
   </div>
   <% end %>
 </div> <!-- .row -->
