--- a/content/schedule/devrooms/ada.html
+++ b/content/schedule/devrooms/ada.html
@@ -7,19 +7,19 @@ perfectly suited for open source development.
 </p>
 <p>
 Awareness of safety and security issues in software systems is
-increasing.  Multi-core platforms are now abundant.  These are
+ever increasing.  Multi-core platforms are now abundant.  These are
 some of the reasons that the Ada programming language and technology
 attracts more and more attention, among others due to Ada's support for
 programming by contract and for multi-core targets.  The latest Ada
 language definition was updated early 2016.  Work on new features is
 ongoing, such as improved support for fine-grained parallelism, and
-will result in a new Ada standard scheduled for 2020.  Ada-related
+will result in a new Ada standard scheduled for 2021.  Ada-related
 technology such as SPARK provides a solution for the safety and
 security aspects stated above.
 </p>
 <p>
-More and more tools are available, many are open source, including
-for small and recent platforms.  Interest in Ada keeps increasing,
+More and more tools are available, many are open source, including for
+small and recent platforms.  Interest in Ada keeps further increasing,
 also in the open source community, and many exciting projects have
 been started.
 </p><p>
