Update the DNS DevRoom page
Update the description to match the talks for this year.

--- a/content/schedule/devrooms/dns.html
+++ b/content/schedule/devrooms/dns.html
@@ -2,5 +2,5 @@
 The DNS devroom will cover all topics DNS.
 </p>
 <p>
-Our schedule starts with talks from and about actual DNS software development. Then, we will move on to the current hot topic of DNS Privacy, with some talks about DNS over HTTPS, for both the developer and the policy-interested audience, finished off by a panel discussion on trends in DNS Privacy. After that, some operational content on performance measurement and multi-vendor deployments. We will spend the last two hours discussing DNSSEC in various contexts.
+  This half-day will start with several talks on DNS integration into larger systems (including IPv6) followed by 2 talks on code quality and testing. Next we'll have talks about new DNS software and management features. We'll close with a more operational topic.
 </p>
