Link to pentabarf export tool

--- a/content/manuals/program/devroom.html
+++ b/content/manuals/program/devroom.html
@@ -331,7 +331,7 @@ You also agree to find:
 </tbody></table>
 
 <h2>Before the event</h2>
-<h3>Call for Papers</h3>
+<h3 id="call">Call for Participation/Call for Papers</h3>
 <p>
 Devrooms normally issue a Call for Papers.
 <ul>
@@ -489,12 +489,16 @@ To schedule a task in pentabarf you have to:
     </li>
 </ul>
 <h4>Inform your speakers</h4>
-<p>Keep in mind that pentabarf does not send automatical emails. You have to inform your speakers yourself. 
-<p>
-Encourage your speakers to upload photographs and to
-write short biographies.  If you add a speaker to the system yourself,
-make sure you include a contact email address.
-</p>
+<ul>
+  <li>
+    Keep in mind that pentabarf does not send automatical emails. You have to inform your speakers yourself. Note that you can use <a href="https://github.com/meyskens/penta-export">this utility</a> provided by the Go devroom managers (thanks!) to get an export of all talks of your track with contact details of the speakers. 
+  </li>
+  <li>
+    Encourage your speakers to upload photographs and to
+    write short biographies.  If you add a speaker to the system yourself,
+    make sure you include a contact email address.
+  </li>
+</ul>
 <h4>Scheduling hints</h4>
 <ul>
 <li>
