--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -50,6 +50,12 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
 </p>
 
 <p>
+  Keep in mind that PGP keys using the DSA-1024 algorithm are no longer
+  accepted by GnuPG web-of-trust: Please upgrade your PGP key before
+  submission, if it relies on this algorithm.
+</p>
+
+<p>
   You may want to verify that your submission made it to the keyserver by
   checking the list of submitted keys at <a
   href="https://ksp.fosdem.org/">https://ksp.fosdem.org/</a>.
