Fix ampersand html encoding

--- a/content/schedule/devrooms/software_defined_networking.html
+++ b/content/schedule/devrooms/software_defined_networking.html
@@ -11,7 +11,7 @@
 
     This year the devroom will focuses on the following subject areas:-
     <ul>
-	<li>Cloud, Kubernetes & CNI</li>
+	<li>Cloud, Kubernetes &amp; CNI</li>
 	<li>Telemetry</li>
 	<li>eBPF</li>
 	<li>QUIC</li>
