--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -38,28 +38,41 @@ title: Accessibility
 </p>
 
 <p>
+  All signposted routes between buildings are step-free, unless indicated otherwise (with a set of steps). If the route is not step-free, there will be an accessible route nearby, indicated with signs (look for the elevator or wheelchair signs).
+</p>
+<ul>
+  <li>To get to <b>Janson</b>, you must go via <b>H</b>.</li>
+  <li>To get from <b>K</b> to the rest of the campus (and vice versa), use the <b>F</b> building. A lift and a stair lift will help you bridge the height difference, just follow the signs.</li>
+</ul>
+
+<p>
+  Almost all rooms can be accessed without stairs, except for some devrooms in AW:
+</p>
+<ul>
+  <li>AW1.121</li>
+  <li>AW1.125</li>
+</ul>
+
+<p>
+  We film all talks, so if you wish to follow what is going on in both rooms, make your way to one of the hacker rooms (H building), whip out the headphones and head to <a href="https://video.fosdem.org">video.fosdem.org</a>.
+</p>
+<p>
+  All other rooms and buildings can be accessed without the use of stairs, allthough sometimes a little detour might be needed. We'll put up signs to make sure you do not get lost. This holds especially for the following locations.
+</p>
+<ul>
+  <li>The main route via the car park to Janson is not step free. For step free access, go to the first floor of the H building and follow the signs to Janson.</li>
+  <li>The rooms in UD cannot be accessed from the main entrance in the garden. Use the entrance on Avenue Paul Héger and go to the second floor with the elevator.</li>
+  <li>To get to UA, enter via UB, take the elevator to the first floor and follow the signs until you reach another elevator. Go to the second floor for UA.</li>
+  <li>You enter UB on the second floor via the garden. To go to other floors, use the lift and follow the signs to FOSDEM.</li>
+</ul>
+
+<p>
   At <a href="https://nav.fosdem.org">nav.fosdem.org</a>, you will
   find our on-campus route planner. It has an option for avoiding
   stairs. All routes calculated with this option set should be
   wheelchair and limited mobility accessible.
 </p>
 
-<p>
-  Unfortunately, some rooms are only accessible by using stairs:
-</p>
-
-<ul>
-  <li>AW1.121</li>
-  <li>AW1.125</li>
-  <li>UA2.114 (Baudoux)</li>
-  <li>UA2.118 (Henriot)</li>
-  <li>UA2.220 (Guillissen)</li>
-</ul>
-
-<p>
-  If you understand French, the <a href="https://www.ulb.ac.be/mobilite/PMR-acces.html">ULB's website</a>
-  may be a useful source of additional information.
-<P>
 
 <h3>Accessibility contact</h3>
 
