Properly escape ampersand

--- a/content/schedule/devrooms/software_defined_networking.html
+++ b/content/schedule/devrooms/software_defined_networking.html
@@ -9,7 +9,7 @@
 <p>
     This year the devroom will focus on the following subject areas.
     <ul>
-	<li>Cloud, Kubernetes & CNI</li>
+	<li>Cloud, Kubernetes &amp; CNI</li>
 	<li>Telemetry</li>
 	<li>eBPF</li>
 	<li>QUIC</li>
