--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -50,7 +50,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-<b>The Sunday tour</b> starts at 12:30. We'll discover some of the monuments in the city center, have a short coffee break, and go underground visiting the archaelogical site of the historical <a href="https://coudenberg.brussels">Coudenberg palace</a>.
+<b>The Sunday tour</b> starts at 12:30. We'll discover some of the monuments in the city center, interrupted by a short coffee break. More details to follow.
   We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
