Update url for sojourner-web

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -51,7 +51,7 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 <li><b>Sojourner web interface</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    <a href="https://sojourner.loomchild.net/">Sojourner web app</a><br />
+    <a href="https://fosdem.sojourner.rocks/">Sojourner web app</a><br />
 </li>
 </ul>
 
