--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,51 +7,33 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
-<h3>Apps for Mobile Devices, tested for 2018</h3>
+<h3>Apps for Mobile Devices, tested for 2020</h3>
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
-    Available from the <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">android market</a>.<br />
-    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
-</li>
-<li><b>Android: FOSDEM Schedule</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2019">Source code</a>,<br />
-    Available from the <a
-    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">android market</a>.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">google play</a>.<br />
+    Older release available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
-<li><b>iPhone: fosdem-org</b><br />
-    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
-</li>
-<li><b>N900: Sojourner</b><br />
-    <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
-    Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
-    Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
+<li><b>Sojourner web interface</b><br />
+    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
+    <a href="https://sojourner.loomchild.net/">Sojourner web app</a> (being updated as we speak)<br />
 </li>
 <li><b>Ubuntu Phone: FOSDEM</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a>.<br />
 </li>
 <li><b>Windows Phone: FOSDEM</b><br />
     <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
-    Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
+    Older release available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
     <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
     Available in official Debian, Ubuntu and Maemo5 repositories,<br />
     (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
-</li>
-<li><b>Generic mobile web interface</b><br />
-    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
-</li>
-<li><b>Sojourner web interface</b><br />
-    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    <a href="https://sojourner.loomchild.net/">Sojourner web app</a><br />
 </li>
 </ul>
 
@@ -61,8 +43,25 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 
 <hr />
 
-<h3>Apps for Mobile Devices, archive from 2014 and before</h3>
+<h3>Apps for Mobile Devices, archive from 2018 and before</h3>
 <ul>
+<li><b>N900: Sojourner (2019)</b><br />
+    <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
+    Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
+    Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
+</li>
+<li><b>iPhone: fosdem-org (2019)</b><br />
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
+    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
+</li>
+<li><b>Android: FOSDEM Schedule (2019)</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2019">Source code</a>,<br />
+    Available from the <a
+    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">google play</a>.<br />
+</li>
+<li><b>Generic mobile web interface (2018)</b><br />
+    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
+</li>
 <li><b>Android: fosdem-android</b><br />
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
     <a href="https://github.com/rkallensee/fosdem-android">Github fork of 2013</a>,<br />
