fix sojourner url

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -16,12 +16,12 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
+    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">google play</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
 <li><b>Sojourner web interface</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    <a href="https://sojourner.loomchild.net/">Sojourner web app</a> (being updated as we speak)<br />
+    <a href="https://fosdem.sojourner.rocks">Sojourner web app</a><br />
 </li>
 <li><b>Ubuntu Phone: FOSDEM</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
