--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -16,7 +16,7 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">google play</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">google play</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
 <li><b>Sojourner web interface</b><br />
