--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -19,9 +19,13 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">google play</a>,<br />
     Available from F-droid market, also has direct <a href="https://f-droid.org/en/packages/net.gaast.giggity/">apk download</a>.<br />
 </li>
-<li><b>Sojourner web interface</b><br />
+<li><b>Progressive web app: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    <a href="https://fosdem.sojourner.rocks">Sojourner web app</a><br />
+    <a href="https://fosdem.sojourner.rocks">progressive web app</a><br />
+</li>
+<li><b>iPhone: fosdem-org (2019)</b><br />
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
+    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
 </li>
 <li><b>Ubuntu Phone: FOSDEM</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
@@ -50,10 +54,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
-</li>
-<li><b>iPhone: fosdem-org (2019)</b><br />
-    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
 </li>
 <li><b>Android: FOSDEM Schedule (2019)</b><br />
     <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2019">Source code</a>,<br />
