fix typo again; sorry

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -23,7 +23,7 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
     <a href="https://fosdem.sojourner.rocks">progressive web app</a><br />
 </li>
-<li><b>iPhone: fosdem-org (2019)</b><br />
+<li><b>iPhone: fosdem-org</b><br />
     <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
     Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
 </li>
